cattlevax-sf-sandbox/force-app/main/default/objects/APHA_GOVUKNotifyTemplatesId__mdt/APHA_GOVUKNotifyTemplatesId__mdt.object-meta.xml
<CustomObject>
    <label>GOV.UK Notify Templates Id</label>
    <pluralLabel>GOV.UK Notify Templates Id</pluralLabel>
</CustomObject>