cattlevax-sf-sandbox/force-app/main/default/objects/APHA_GOVUKNotifyTemplatesId__mdt/fields/APHA_GOVUKNotifyAPIKey__c.field-meta.xml
<CustomField>
    <fullName>APHA_GOVUKNotifyAPIKey__c</fullName>
    <label>GOV.UK Notify API Key</label>
    <referenceTo>APHA_GOVUKNotifyAPIKey__mdt</referenceTo>
    <relationshipLabel>GOV.UK Notify Templates Id</relationshipLabel>
    <relationshipName>GOV_UK_Notify_Templates_Id</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>