cattlevax-sf-sandbox/force-app/main/default/objects/APHA_GOVUKNotifyTemplatesId__mdt/fields/APHA_TemplateName__c.field-meta.xml
<CustomField>
    <fullName>APHA_TemplateName__c</fullName>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>