cattlevax-sf-sandbox/force-app/main/default/objects/APHA_GOVUKNotifyTemplatesId__mdt/fields/APHA_TemplateType__c.field-meta.xml
<CustomField>
    <fullName>APHA_TemplateType__c</fullName>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>